--- a/install.html
+++ b/install.html
@@ -157,6 +157,13 @@ brew update
 brew upgrade Azure/kubelogin/kubelogin
 </code></pre>
 <h2 id="linux"><a class="header" href="#linux">Linux</a></h2>
+<h3 id="using-azure-cli"><a class="header" href="#using-azure-cli-linux">Using <a href="https://learn.microsoft.com/en-us/cli/azure/aks?view=azure-cli-latest#az-aks-install-cli">az aks install-cli</a></a></h3>
+<pre><code class="language-sh"># install
+# Command may require sudo
+az aks install-cli
+# Confirm kubelogin is installed
+which kubelogin
+</code></pre>     
 <h3 id="using-asdf"><a class="header" href="#using-asdf">Using <a href="https://asdf-vm.com/">asdf</a></a></h3>
 <p><em>asdf and the asdf-kubelogin plugin are not maintained by Microsoft.</em></p>
 <pre><code class="language-sh"># install
